Fix bug that stretches images on iphone

--- a/src/pages/Work/Work.scss
+++ b/src/pages/Work/Work.scss
@@ -157,6 +157,7 @@
 
     &__each {
       width: 32%;
+      height: auto;
     }
   }
 
